--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body style="background-color:#111; color:white; text-align:center; padding-top:100px;">
   <h1></h1>
-  <img src="unnamed.png" alt="Imagem" width="400">
+  <img src="unnamaed.png" alt="Imagem" width="400">
 </body>
 </html>
